v2.2.1/_sources/plugins/lan_automation_update_device_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.catalystcenter.lan_automation_update_device module -- Resource module for Lan Automation Update Device
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.catalystcenter collection <https://galaxy.ansible.com/cisco/catalystcenter>`_ (version 2.2.1).

    To install it, use: :code:`ansible-galaxy collection install cisco.catalystcenter`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.catalystcenter.lan_automation_update_device_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.catalystcenter.lan_automation_update_device`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.catalystcenter 6.14.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage operation update of the resource Lan Automation Update Device. - \> Invoke this API to perform a DAY-N update on LAN Automation-related devices. Supported features include Loopback0 IP update, hostname update, link addition, and link deletion.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

.. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- catalystcentersdk \>= 3.1.3.0.0
- python \>= 3.5






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_api_port"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-catc_api_port:

      .. rst-class:: ansible-option-title

      **catc_api_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_api_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center port.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`443`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_debug"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-catc_debug:

      .. rst-class:: ansible-option-title

      **catc_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_host"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-catc_host:

      .. rst-class:: ansible-option-title

      **catc_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_password"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-catc_password:

      .. rst-class:: ansible-option-title

      **catc_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_username"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-catc_username:

      .. rst-class:: ansible-option-title

      **catc_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center username to authenticate.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-catc_verify:

      .. rst-class:: ansible-option-title

      **catc_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_version"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-catc_version:

      .. rst-class:: ansible-option-title

      **catc_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Cisco Catalyst Center to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"2.3.7.6"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-feature"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-feature:

      .. rst-class:: ansible-option-title

      **feature**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-feature" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Feature query parameter. Feature ID for the update. Supported feature IDs include LOOPBACK0\_IPADDRESS\_UPDATE, HOSTNAME\_UPDATE, LINK\_ADD, and LINK\_DELETE.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-hostnameUpdateDevices"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-hostnameupdatedevices:

      .. rst-class:: ansible-option-title

      **hostnameUpdateDevices**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-hostnameUpdateDevices" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Lan Automation Update Device's hostnameUpdateDevices.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-hostnameUpdateDevices/deviceManagementIPAddress"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-hostnameupdatedevices/devicemanagementipaddress:

      .. rst-class:: ansible-option-title

      **deviceManagementIPAddress**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-hostnameUpdateDevices/deviceManagementIPAddress" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Device Management IP Address.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-hostnameUpdateDevices/newHostName"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-hostnameupdatedevices/newhostname:

      .. rst-class:: ansible-option-title

      **newHostName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-hostnameUpdateDevices/newHostName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      New hostname for the device.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-linkUpdate"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-linkupdate:

      .. rst-class:: ansible-option-title

      **linkUpdate**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-linkUpdate" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Lan Automation Update Device's linkUpdate.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-linkUpdate/destinationDeviceInterfaceName"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-linkupdate/destinationdeviceinterfacename:

      .. rst-class:: ansible-option-title

      **destinationDeviceInterfaceName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-linkUpdate/destinationDeviceInterfaceName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Destination Device Interface Name.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-linkUpdate/destinationDeviceManagementIPAddress"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-linkupdate/destinationdevicemanagementipaddress:

      .. rst-class:: ansible-option-title

      **destinationDeviceManagementIPAddress**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-linkUpdate/destinationDeviceManagementIPAddress" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Destination Device Management IP Address.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-linkUpdate/ipPoolName"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-linkupdate/ippoolname:

      .. rst-class:: ansible-option-title

      **ipPoolName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-linkUpdate/ipPoolName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Name of the IP LAN Pool, required for Link Add should be from discovery site of source and destination device. It is optional for Link Delete.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-linkUpdate/sourceDeviceInterfaceName"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-linkupdate/sourcedeviceinterfacename:

      .. rst-class:: ansible-option-title

      **sourceDeviceInterfaceName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-linkUpdate/sourceDeviceInterfaceName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Source Device Interface Name.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-linkUpdate/sourceDeviceManagementIPAddress"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-linkupdate/sourcedevicemanagementipaddress:

      .. rst-class:: ansible-option-title

      **sourceDeviceManagementIPAddress**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-linkUpdate/sourceDeviceManagementIPAddress" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Source Device Management IP Address.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-loopbackUpdateDeviceList"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-loopbackupdatedevicelist:

      .. rst-class:: ansible-option-title

      **loopbackUpdateDeviceList**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-loopbackUpdateDeviceList" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Lan Automation Update Device's loopbackUpdateDeviceList.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-loopbackUpdateDeviceList/deviceManagementIPAddress"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-loopbackupdatedevicelist/devicemanagementipaddress:

      .. rst-class:: ansible-option-title

      **deviceManagementIPAddress**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-loopbackUpdateDeviceList/deviceManagementIPAddress" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Device Management IP Address.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-loopbackUpdateDeviceList/newLoopback0IPAddress"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-loopbackupdatedevicelist/newloopback0ipaddress:

      .. rst-class:: ansible-option-title

      **newLoopback0IPAddress**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-loopbackUpdateDeviceList/newLoopback0IPAddress" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      New Loopback0 IP Address from LAN Pool of Device Discovery Site(Shared pool should not be used).


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are lan\_automation.LanAutomation.lan\_automation\_device\_update,
   - Paths used are put /dna/intent/api/v1/lan-automation/updateDevice,
   - Does not support \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins,
   - but instead uses the embedded connection manager from Cisco CATALYST SDK

.. Seealso

See Also
--------

.. seealso::

   `Cisco DNA Center documentation for LAN Automation LANAutomationDeviceUpdate <https://developer.cisco.com/docs/dna-center/#!l-an-automation-device-update>`_
       Complete reference of the LANAutomationDeviceUpdate API.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    ---
    - name: Update all
      cisco.catalystcenter.lan_automation_update_device:
        catc_host: "{{catc_host}}"
        catc_username: "{{catc_username}}"
        catc_password: "{{catc_password}}"
        catc_verify: "{{catc_verify}}"
        catc_api_port: "{{catc_api_port}}"
        catc_version: "{{catc_version}}"
        catc_debug: "{{catc_debug}}"
        feature: string
        hostnameUpdateDevices:
          - deviceManagementIPAddress: string
            newHostName: string
        linkUpdate:
          destinationDeviceInterfaceName: string
          destinationDeviceManagementIPAddress: string
          ipPoolName: string
          sourceDeviceInterfaceName: string
          sourceDeviceManagementIPAddress: string
        loopbackUpdateDeviceList:
          - deviceManagementIPAddress: string
            newLoopback0IPAddress: string




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-dnac_response"></div>

      .. _ansible_collections.cisco.catalystcenter.lan_automation_update_device_module__return-dnac_response:

      .. rst-class:: ansible-option-title

      **dnac_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco CATALYST Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"response": {"taskId": "string", "url": "string"}, "version": "string"}`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

